--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,305 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#fff4f4"
     tools:context=".MainActivity">
 
+
     <TextView
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="48dp"
+        android:fontFamily="@font/kufam"
+        android:text="Hi"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="@+id/guideline3"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/username"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:fontFamily="@font/kufam"
+        android:text="Hoang Le Huong!"
+        android:textColor="#F3A6B4"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/textView1"
+        app:layout_constraintTop_toTopOf="@+id/textView1" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/kufam"
+        android:text="Lets discovery a new adventure"
+        android:textColor="#BDBDBD"
+        android:textSize="13sp"
+        app:layout_constraintStart_toStartOf="@+id/textView1"
+        app:layout_constraintTop_toBottomOf="@+id/textView1" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="16dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="16dp" />
+
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/avatar"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:layout_marginTop="48dp"
+        android:background="#CEE9BE"
+        app:shapeAppearanceOverlay="@style/roundedImage"
+        app:circularflow_radiusInDP="20dp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline4"
+        app:layout_constraintHorizontal_bias="0.672"
+        app:layout_constraintStart_toEndOf="@+id/username"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/avatar" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="74dp"
+        android:layout_height="74dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/round_button"
+        android:elevation="16dp"
+        app:layout_constraintStart_toStartOf="@+id/guideline3"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:srcCompat="@drawable/add_icon" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="You"
+        android:textStyle="bold"
+        android:textSize="15sp"
+        android:fontFamily="@font/kufam"
+        app:layout_constraintEnd_toEndOf="@+id/imageButton"
+        app:layout_constraintStart_toStartOf="@+id/imageButton"
+        app:layout_constraintTop_toBottomOf="@+id/imageButton" />
+
+    <ImageButton
+        android:id="@+id/userStory1"
+        android:layout_width="74dp"
+        android:layout_height="74dp"
+        android:layout_marginStart="24dp"
+        android:elevation="8dp"
+        android:background="@drawable/border_gradient"
+        app:layout_constraintStart_toEndOf="@+id/imageButton"
+        app:layout_constraintTop_toTopOf="@+id/imageButton"
+        app:layout_constraintBottom_toBottomOf="@+id/imageButton" />
+
+    <TextView
+        android:id="@+id/userStoryName1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Mai"
+        android:textStyle="bold"
+        android:textSize="15sp"
+        android:fontFamily="@font/kufam"
+        app:layout_constraintEnd_toEndOf="@+id/userStory1"
+        app:layout_constraintStart_toStartOf="@+id/userStory1"
+        app:layout_constraintTop_toBottomOf="@+id/userStory1" />
+
+    <ImageButton
+        android:id="@+id/userStory2"
+        android:layout_width="74dp"
+        android:layout_height="74dp"
+        android:layout_marginStart="24dp"
+        android:elevation="8dp"
+
+        android:background="@drawable/border_gradient"
+        app:layout_constraintStart_toEndOf="@+id/userStory1"
+        app:layout_constraintTop_toTopOf="@+id/userStory1"
+        app:layout_constraintBottom_toBottomOf="@+id/userStory1" />
+
+    <TextView
+        android:id="@+id/userStoryName2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Phuc"
+        android:textStyle="bold"
+        android:textSize="15sp"
+        android:fontFamily="@font/kufam"
+        app:layout_constraintEnd_toEndOf="@+id/userStory2"
+        app:layout_constraintStart_toStartOf="@+id/userStory2"
+        app:layout_constraintTop_toBottomOf="@+id/userStory2" />
+
+    <ImageButton
+        android:id="@+id/userStory3"
+        android:layout_width="74dp"
+        android:layout_height="74dp"
+        android:layout_marginStart="24dp"
+        android:elevation="8dp"
+        android:background="@drawable/border_gradient"
+        app:layout_constraintStart_toEndOf="@+id/userStory2"
+        app:layout_constraintTop_toTopOf="@+id/userStory2"
+        app:layout_constraintBottom_toBottomOf="@+id/userStory2" />
+
+    <TextView
+        android:id="@+id/userStoryName3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Nghia"
+        android:textStyle="bold"
+        android:textSize="15sp"
+        android:fontFamily="@font/kufam"
+        app:layout_constraintEnd_toEndOf="@+id/userStory3"
+        app:layout_constraintStart_toStartOf="@+id/userStory3"
+        app:layout_constraintTop_toBottomOf="@+id/userStory3" />
+
+    <EditText
+        android:id="@+id/findFriends"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:layout_marginTop="16dp"
+        android:inputType="text"
+        android:background="@drawable/round_button"
+        android:hint="Find all your friends"
+        android:textSize="15sp"
+        android:padding="8dp"
+        android:elevation="8dp"
+        android:drawableEnd="@drawable/search_icon"
+        app:layout_constraintEnd_toStartOf="@+id/guideline4"
+        app:layout_constraintStart_toStartOf="@+id/guideline3"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+
+    <ImageButton
+        android:id="@+id/assistantButton"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:background="@drawable/semiround_button"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="24dp"
+        android:elevation="16dp"
+        app:layout_constraintStart_toStartOf="@+id/guideline3"
+        app:layout_constraintTop_toBottomOf="@+id/findFriends"
+        app:srcCompat="@drawable/assistant_icon" />
+
+    <TextView
+        android:id="@+id/textAssistant"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Assistant"
+        android:textStyle="bold"
+        android:textSize="16sp"
+        android:fontFamily="@font/kufam"
+        app:layout_constraintEnd_toEndOf="@+id/assistantButton"
+        app:layout_constraintStart_toStartOf="@+id/assistantButton"
+        app:layout_constraintTop_toBottomOf="@+id/assistantButton" />
+
+    <ImageButton
+        android:id="@+id/thirdPartyButton"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:background="@drawable/semiround_button"
+        android:elevation="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/assistantButton"
+        app:layout_constraintEnd_toStartOf="@+id/settingButton"
+        app:layout_constraintStart_toEndOf="@+id/assistantButton"
+        app:layout_constraintTop_toTopOf="@+id/assistantButton"
+        app:srcCompat="@drawable/assistant_icon" />
+
+    <TextView
+        android:id="@+id/textThirdParty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Third Party"
+        android:textStyle="bold"
+        android:textSize="16sp"
+        android:fontFamily="@font/kufam"
+        app:layout_constraintEnd_toEndOf="@+id/thirdPartyButton"
+        app:layout_constraintStart_toStartOf="@+id/thirdPartyButton"
+        app:layout_constraintTop_toBottomOf="@+id/thirdPartyButton" />
+
+    <ImageButton
+        android:id="@+id/settingButton"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginEnd="24dp"
+        android:background="@drawable/semiround_button"
+        android:elevation="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/thirdPartyButton"
+        app:layout_constraintEnd_toStartOf="@+id/guideline4"
+        app:layout_constraintTop_toTopOf="@+id/thirdPartyButton"
+        app:srcCompat="@drawable/setting_icon" />
+
+    <TextView
+        android:id="@+id/textSetting"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Setting"
+        android:textStyle="bold"
+        android:textSize="16sp"
+        android:fontFamily="@font/kufam"
+        app:layout_constraintEnd_toEndOf="@+id/settingButton"
+        app:layout_constraintStart_toStartOf="@+id/settingButton"
+        app:layout_constraintTop_toBottomOf="@+id/settingButton" />
+
+    <TextView
+        android:id="@+id/textDiscover"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="Discover"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/guideline3"
+        app:layout_constraintTop_toBottomOf="@+id/textAssistant" />
+
+    <TextView
+        android:id="@+id/textTrend"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="Trend"
+        android:textStyle="bold"
+        android:textSize="15sp"
+        app:layout_constraintStart_toStartOf="@+id/guideline3"
+        app:layout_constraintTop_toBottomOf="@+id/textDiscover" />
+
+    <TextView
+        android:id="@+id/textTopYear"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="Top year"
+        android:textStyle="bold"
+        android:textSize="15sp"
+        app:layout_constraintStart_toEndOf="@+id/textTrend"
+        app:layout_constraintTop_toTopOf="@+id/textTrend"
+        app:layout_constraintBottom_toBottomOf="@+id/textTrend"/>
+
+    <TextView
+        android:id="@+id/textFavourite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="Favourite"
+        android:textStyle="bold"
+        android:textSize="15sp"
+        app:layout_constraintStart_toEndOf="@+id/textTopYear"
+        app:layout_constraintTop_toTopOf="@+id/textTopYear"
+        app:layout_constraintBottom_toBottomOf="@+id/textTopYear"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
