--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -5,7 +5,7 @@
     android:id="@+id/tv"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/signinbackground">
+    android:background="#fff">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
@@ -27,6 +27,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="43dp"
         android:text="Sign up"
+        android:fontFamily="@font/kufam"
+        android:textColor="#93BC66"
         android:textSize="13sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -35,7 +37,6 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="344dp"
         android:layout_height="456dp"
-        android:background="@drawable/background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
@@ -60,21 +61,23 @@
             android:id="@+id/btnGg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
+            android:layout_marginStart="33dp"
             android:layout_marginTop="30dp"
-            android:backgroundTint="#B9E8F9"
+            android:backgroundTint="#93BC66"
             android:text="with Google"
             android:textSize="15sp"
             app:icon="@drawable/google"
+            app:iconTint="#F44336"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
         <ImageButton
             android:id="@+id/btnfacebook"
-            android:layout_width="wrap_content"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="15dp"
             android:background="@drawable/shape_rectangle"
+            android:backgroundTint="#F2F1F1"
             android:padding="10dp"
             app:layout_constraintBottom_toBottomOf="@+id/btnGg"
             app:layout_constraintStart_toEndOf="@+id/btnGg"
@@ -83,10 +86,11 @@
 
         <ImageButton
             android:id="@+id/btntwitter"
-            android:layout_width="wrap_content"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="15dp"
             android:background="@drawable/shape_rectangle"
+            android:backgroundTint="#F2F1F1"
             android:padding="10dp"
             app:layout_constraintBottom_toBottomOf="@+id/btnfacebook"
             app:layout_constraintStart_toEndOf="@+id/btnfacebook"
@@ -98,12 +102,15 @@
             android:layout_width="272dp"
             android:layout_height="40dp"
             android:layout_marginTop="56dp"
-            android:background="@drawable/shape_rectangle"
+            android:background="@drawable/semiround_button"
+            android:elevation="16dp"
             android:ems="10"
             android:hint="Email/Phone number"
+            android:textColor="#8F8F8F"
+            android:backgroundTint="#F2F1F1"
             android:inputType="text"
             android:textSize="12sp"
-            android:paddingLeft="20dp"
+            android:paddingHorizontal="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btnGg" />
@@ -113,12 +120,15 @@
             android:layout_width="272dp"
             android:layout_height="40dp"
             android:layout_marginTop="20dp"
-            android:background="@drawable/shape_rectangle"
+            android:background="@drawable/semiround_button"
+            android:elevation="16dp"
             android:ems="10"
             android:hint="Password"
+            android:textColor="#8F8F8F"
+            android:backgroundTint="#F2F1F1"
             android:inputType="textPassword"
             android:textSize="12sp"
-            android:paddingLeft="20dp"
+            android:paddingHorizontal="20dp"
             app:layout_constraintEnd_toEndOf="@+id/edEmail"
             app:layout_constraintStart_toStartOf="@+id/edEmail"
             app:layout_constraintTop_toBottomOf="@+id/edEmail" />
@@ -130,6 +140,7 @@
             android:layout_marginTop="10dp"
             android:textStyle="italic"
             android:textSize="12sp"
+            android:textColor="#000000"
             android:text="Forget your pasword?"
             app:layout_constraintEnd_toEndOf="@+id/edPassword"
             app:layout_constraintStart_toStartOf="@+id/edPassword"
@@ -138,12 +149,15 @@
         <Button
             android:id="@+id/btnSignin"
             android:layout_width="234dp"
-            android:layout_height="wrap_content"
+            android:layout_height="55dp"
             android:layout_marginTop="20dp"
+            android:backgroundTint="#000000"
+            android:fontFamily="@font/kufam"
+            android:gravity="center"
             android:text="Sign In"
+            android:textColor="#fff"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:backgroundTint="#FF9CAF"
             app:layout_constraintEnd_toEndOf="@+id/tvForget"
             app:layout_constraintStart_toStartOf="@+id/tvForget"
             app:layout_constraintTop_toBottomOf="@+id/tvForget" />
