--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/signinbackground">
+    android:background="#fff">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
@@ -26,14 +26,15 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="43dp"
         android:text="Sign in"
+        android:textColor="#93BC66"
+        android:fontFamily="@font/kufam"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="344dp"
-        android:layout_height="456dp"
-        android:background="@drawable/background"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
@@ -45,6 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="37dp"
+            android:fontFamily="@font/kufam"
             android:text="Sign Up"
             android:textColor="#000000"
             android:textSize="48sp"
@@ -58,21 +60,22 @@
             android:id="@+id/btnGg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="30dp"
-            android:backgroundTint="#B9E8F9"
+            android:layout_marginStart="30dp"
+            android:backgroundTint="#93BC66"
             android:text="with Google"
             android:textSize="15sp"
             app:icon="@drawable/google"
+            app:iconTint="#F44336"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
         <ImageButton
             android:id="@+id/btnfacebook"
-            android:layout_width="wrap_content"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="15dp"
             android:background="@drawable/shape_rectangle"
+            android:backgroundTint="#F2F1F1"
             android:padding="10dp"
             app:layout_constraintBottom_toBottomOf="@+id/btnGg"
             app:layout_constraintStart_toEndOf="@+id/btnGg"
@@ -81,10 +84,11 @@
 
         <ImageButton
             android:id="@+id/btntwitter"
-            android:layout_width="wrap_content"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="15dp"
             android:background="@drawable/shape_rectangle"
+            android:backgroundTint="#F2F1F1"
             android:padding="10dp"
             app:layout_constraintBottom_toBottomOf="@+id/btnfacebook"
             app:layout_constraintStart_toEndOf="@+id/btnfacebook"
@@ -95,12 +99,15 @@
             android:id="@+id/edName"
             android:layout_width="272dp"
             android:layout_height="40dp"
-            android:layout_marginTop="15dp"
-            android:background="@drawable/shape_rectangle"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/semiround_button"
+            android:elevation="16dp"
             android:ems="10"
             android:hint="Name"
+            android:textColor="#8F8F8F"
+            android:backgroundTint="#F2F1F1"
             android:inputType="text"
-            android:paddingLeft="20dp"
+            android:paddingHorizontal="20dp"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -111,12 +118,15 @@
             android:layout_width="272dp"
             android:layout_height="40dp"
             android:layout_marginTop="20dp"
-            android:background="@drawable/shape_rectangle"
+            android:background="@drawable/semiround_button"
+            android:elevation="16dp"
             android:ems="10"
             android:hint="Email/Phone number"
+            android:textColor="#8F8F8F"
+            android:backgroundTint="#F2F1F1"
             android:inputType="text"
+            android:paddingHorizontal="20dp"
             android:textSize="12sp"
-            android:paddingLeft="20dp"
             app:layout_constraintEnd_toEndOf="@+id/edName"
             app:layout_constraintStart_toStartOf="@+id/edName"
             app:layout_constraintTop_toBottomOf="@+id/edName" />
@@ -126,12 +136,15 @@
             android:layout_width="272dp"
             android:layout_height="40dp"
             android:layout_marginTop="20dp"
-            android:background="@drawable/shape_rectangle"
+            android:background="@drawable/semiround_button"
+            android:elevation="16dp"
             android:ems="10"
             android:hint="Password"
+            android:textColor="#8F8F8F"
+            android:backgroundTint="#F2F1F1"
             android:inputType="textPassword"
+            android:paddingHorizontal="20dp"
             android:textSize="12sp"
-            android:paddingLeft="20dp"
             app:layout_constraintEnd_toEndOf="@+id/edEmail"
             app:layout_constraintStart_toStartOf="@+id/edEmail"
             app:layout_constraintTop_toBottomOf="@+id/edEmail" />
@@ -139,10 +152,12 @@
         <Button
             android:id="@+id/btnSignup"
             android:layout_width="234dp"
-            android:layout_height="wrap_content"
+            android:layout_height="55dp"
             android:layout_marginTop="30dp"
-            android:backgroundTint="#FF9CAF"
+            android:backgroundTint="#000000"
+            android:fontFamily="@font/kufam"
             android:text="Sign Up"
+            android:textColor="#fff"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/edPassword"
