--- a/app/src/main/res/layout/activity_forgetpassword.xml
+++ b/app/src/main/res/layout/activity_forgetpassword.xml
@@ -5,7 +5,7 @@
     android:id="@+id/tv"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/signinbackground">
+    android:background="#fff">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
@@ -24,7 +24,6 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="344dp"
         android:layout_height="456dp"
-        android:background="@drawable/background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
@@ -36,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="37dp"
-            android:text="Forget password"
+            android:text="Forget"
             android:gravity="center"
             android:textColor="#000000"
             android:textSize="48sp"
@@ -47,27 +46,42 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:textStyle="bold|italic"
-            android:textSize="12sp"
-            android:text="A verification code will be end to your email"
+            android:gravity="center"
+            android:text="password"
+            android:textColor="#93BC66"
+            android:textSize="48sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/textView3"
             app:layout_constraintStart_toStartOf="@+id/textView3"
             app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="A verification code will be end to your email"
+            android:textSize="12sp"
+            android:textStyle="bold|italic"
+            app:layout_constraintEnd_toEndOf="@+id/textView4"
+            app:layout_constraintStart_toStartOf="@+id/textView4"
+            app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
         <EditText
             android:id="@+id/edEmail"
             android:layout_width="272dp"
             android:layout_height="40dp"
             android:layout_marginTop="30dp"
-            android:background="@drawable/shape_rectangle"
+            android:background="@drawable/semiround_button"
+            android:elevation="16dp"
             android:ems="10"
             android:hint="Email"
+            android:textColor="#8F8F8F"
+            android:backgroundTint="#F2F1F1"
             android:inputType="text"
-            android:paddingLeft="20dp"
+            android:paddingHorizontal="20dp"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -79,7 +93,7 @@
             android:layout_width="234dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:backgroundTint="#FF9CAF"
+            android:backgroundTint="#000000"
             android:text="Send"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -92,11 +106,12 @@
 
     <ImageButton
         android:id="@+id/imgbtnGoback"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="19dp"
+        android:layout_marginTop="25dp"
         android:background="@android:color/transparent"
+        app:tint="#0B0A0A"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/arrow_back" />
