--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
             android:layout_marginStart="5dp"
             android:fontFamily="@font/kufam"
             android:text="Hoang Le Huong!"
-            android:textColor="#F3A6B4"
+            android:textColor="#93BC66"
             android:textSize="20sp"
             app:layout_constraintStart_toEndOf="@+id/textView1"
             app:layout_constraintTop_toTopOf="@+id/textView1" />
@@ -65,7 +65,7 @@
             android:layout_width="75dp"
             android:layout_height="75dp"
             android:layout_marginTop="48dp"
-            android:background="#CEE9BE"
+            android:background="#DADADA"
             app:shapeAppearanceOverlay="@style/roundedImage"
             app:circularflow_radiusInDP="20dp"
             app:layout_constraintEnd_toStartOf="@+id/guideline4"
@@ -90,6 +90,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="You"
+            android:textColor="#93BC66"
             android:textStyle="bold"
             android:textSize="15sp"
             android:fontFamily="@font/kufam"
@@ -175,11 +176,14 @@
             android:layout_marginTop="32dp"
             android:inputType="text"
             android:background="@drawable/round_button"
+            android:backgroundTint="@color/black"
             android:hint="Find all your friends"
+            android:textColorHint="@color/white"
             android:textSize="15sp"
             android:padding="8dp"
             android:elevation="8dp"
             android:drawableEnd="@drawable/search_icon"
+            android:drawableTint="@color/white"
             app:layout_constraintEnd_toStartOf="@+id/guideline4"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
             app:layout_constraintTop_toBottomOf="@+id/textView4" />
