--- a/app/src/main/res/drawable/semiround_button.xml
+++ b/app/src/main/res/drawable/semiround_button.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners android:radius="35dp" />
-    <solid android:color="@color/black"/>
+    <solid android:color="@color/white"/>
 
 </shape>
