--- a/app/src/main/res/layout/activity_detail_hotel.xml
+++ b/app/src/main/res/layout/activity_detail_hotel.xml
@@ -10,8 +10,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/sapa">
-
-
     <ImageButton
         android:id="@+id/imgbtnGoback"
         android:layout_width="40dp"
@@ -24,13 +22,17 @@
         app:srcCompat="@drawable/arrow_back" />
 
     <TextView
-        android:id="@+id/etNameplace"
-        android:layout_width="65dp"
+        android:id="@+id/etNameHotel"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:text="Sa Pa"
+        android:gravity="center"
+        android:text="Pao's Sapa Leisure Hotel"
+        android:fontFamily="@font/kufam"
         android:textColor="#fff"
-        android:textSize="48sp"
+        android:textSize="24sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.794"
         app:layout_constraintStart_toEndOf="@+id/imgbtnGoback"
         app:layout_constraintTop_toBottomOf="@+id/imgbtnGoback" />
 
@@ -42,7 +44,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etNameplace"
+        app:layout_constraintTop_toBottomOf="@+id/etNameHotel"
         app:layout_constraintVertical_bias="0.0">
 
         <androidx.constraintlayout.widget.Guideline
@@ -65,26 +67,26 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="39dp"
             android:fontFamily="@font/kufam"
-            android:text="Trending places"
+            android:text="Pictures"
             android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/guideline"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageButton
+        <ImageView
             android:id="@+id/image1"
-            android:layout_width="95dp"
-            android:layout_height="95dp"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
             android:background="@drawable/semiround_button"
             android:elevation="16dp"
             android:padding="10dp"
             app:layout_constraintStart_toStartOf="@+id/guideline"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-        <ImageButton
+        <ImageView
             android:id="@+id/image2"
-            android:layout_width="95dp"
-            android:layout_height="95dp"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
             android:layout_marginStart="10dp"
             android:background="@drawable/semiround_button"
             android:elevation="16dp"
@@ -93,10 +95,10 @@
             app:layout_constraintStart_toEndOf="@+id/image1"
             app:layout_constraintTop_toTopOf="@+id/image1" />
 
-        <ImageButton
+        <ImageView
             android:id="@+id/image3"
-            android:layout_width="95dp"
-            android:layout_height="95dp"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
             android:layout_marginStart="10dp"
             android:background="@drawable/semiround_button"
             android:elevation="16dp"
@@ -105,10 +107,10 @@
             app:layout_constraintStart_toEndOf="@+id/image2"
             app:layout_constraintTop_toTopOf="@+id/image2" />
 
-        <ImageButton
+        <ImageView
             android:id="@+id/image4"
-            android:layout_width="95dp"
-            android:layout_height="95dp"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
             android:layout_marginStart="10dp"
             android:background="@drawable/semiround_button"
             android:elevation="16dp"
@@ -123,32 +125,79 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:fontFamily="@font/kufam"
-            android:text="Comments"
+            android:text="Most popular facilities"
             android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/guideline"
             app:layout_constraintTop_toBottomOf="@+id/image1" />
 
+        <LinearLayout
+            android:id="@+id/list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintStart_toStartOf="@+id/guideline"
+            app:layout_constraintTop_toBottomOf="@+id/textView2">
+            <ListView
+                android:id="@+id/lvSevices"
+                android:layout_width="200dp"
+                android:layout_height="500dp"
+                android:layout_marginTop="10dp"
+                app:layout_constraintStart_toStartOf="@+id/guideline"
+                app:layout_constraintTop_toBottomOf="@+id/tvNewest" />
+            <ListView
+                android:id="@+id/lvExtensions"
+                android:layout_width="200dp"
+                android:layout_height="500dp"
+                android:layout_marginTop="10dp"
+                app:layout_constraintStart_toStartOf="@+id/guideline"
+                app:layout_constraintTop_toBottomOf="@+id/tvNewest" />
+        </LinearLayout>
+
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
             android:fontFamily="@font/kufam"
-            android:text="(16k)"
+            android:text="Guest reviews"
             android:textSize="15sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/textView2"
-            app:layout_constraintStart_toEndOf="@+id/textView2"
-            app:layout_constraintTop_toTopOf="@+id/textView2" />
-
-        <ListView
-            android:id="@+id/lvComment"
-            android:layout_width="match_parent"
-            android:layout_height="500dp"
-            android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toBottomOf="@+id/tvNewest" />
+            app:layout_constraintTop_toBottomOf="@+id/list" />
+
+        <LinearLayout
+            android:id="@+id/listReview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintStart_toStartOf="@+id/guideline"
+            app:layout_constraintTop_toBottomOf="@+id/textView3">
+            <ListView
+                android:id="@+id/lvstaff"
+                android:layout_width="200dp"
+                android:layout_height="500dp"
+                android:layout_marginTop="10dp"
+                app:layout_constraintStart_toStartOf="@+id/guideline"
+                app:layout_constraintTop_toBottomOf="@+id/tvNewest" />
+            <ListView
+                android:id="@+id/lvdevice"
+                android:layout_width="200dp"
+                android:layout_height="500dp"
+                android:layout_marginTop="10dp"
+                app:layout_constraintStart_toStartOf="@+id/guideline"
+                app:layout_constraintTop_toBottomOf="@+id/tvNewest" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/kufam"
+            android:text="Comments"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@+id/guideline"
+            app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
         <TextView
             android:id="@+id/tvNewest"
@@ -160,72 +209,18 @@
             android:paddingVertical="10dp"
             android:text="Newest"
             android:textColor="#fff"
+            app:layout_constraintStart_toStartOf="@+id/textView4"
+            app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        <ListView
+            android:id="@+id/lvComment"
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
+            android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+            app:layout_constraintTop_toBottomOf="@+id/tvNewest" />
 
-        <Button
-            android:id="@+id/textView8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:backgroundTint="#FFFFFF"
-            android:elevation="16dp"
-            android:text="5 (6,9k)"
-            android:textColor="@color/black"
-            app:icon="@drawable/star_rate"
-            app:iconTint="#8BC34A"
-            app:layout_constraintBottom_toBottomOf="@+id/tvNewest"
-            app:layout_constraintStart_toEndOf="@+id/tvNewest"
-            app:layout_constraintTop_toTopOf="@+id/tvNewest"
-            app:strokeColor="#5C5858"
-            app:strokeWidth="1dp" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imgbtnGoback"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.678"
-        app:layout_constraintStart_toEndOf="@+id/imgbtnGoback"
-        app:layout_constraintTop_toTopOf="@+id/imgbtnGoback"
-        app:srcCompat="@drawable/star_rate" />
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:srcCompat="@drawable/star_rate" />
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="@+id/imageView2"
-        app:srcCompat="@drawable/star_rate" />
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
-        app:layout_constraintStart_toEndOf="@+id/imageView3"
-        app:layout_constraintTop_toTopOf="@+id/imageView3"
-        app:srcCompat="@drawable/star_rate" />
-    <ImageView
-        android:id="@+id/star5"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
-        app:layout_constraintStart_toEndOf="@+id/imageView4"
-        app:layout_constraintTop_toTopOf="@+id/imageView4"
-        app:srcCompat="@drawable/star_rate" />
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
