--- a/app/src/main/res/layout/layout_cmt.xml
+++ b/app/src/main/res/layout/layout_cmt.xml
@@ -6,12 +6,26 @@
     android:layout_height="match_parent"
     android:paddingVertical="20dp">
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="24dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="5dp" />
+
     <ImageView
         android:id="@+id/imgAvatar"
         android:layout_width="29dp"
         android:layout_height="29dp"
         android:background="@drawable/border_gradient"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -40,13 +54,20 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_begin="5dp" />
+            app:layout_constraintGuide_begin="30dp" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline4"
@@ -60,59 +81,61 @@
             android:layout_width="13dp"
             android:layout_height="13dp"
             android:layout_marginTop="32dp"
-            app:tint="#93BC66"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/star_rate" />
+            app:srcCompat="@drawable/star_rate"
+            app:tint="#93BC66" />
 
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="13dp"
             android:layout_height="13dp"
-            app:tint="#93BC66"
             app:layout_constraintBottom_toBottomOf="@+id/imageView"
             app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintTop_toTopOf="@+id/imageView"
-            app:srcCompat="@drawable/star_rate" />
+            app:srcCompat="@drawable/star_rate"
+            app:tint="#93BC66" />
+
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="13dp"
             android:layout_height="13dp"
-            app:tint="#93BC66"
             app:layout_constraintBottom_toBottomOf="@+id/imageView2"
             app:layout_constraintStart_toEndOf="@+id/imageView2"
             app:layout_constraintTop_toTopOf="@+id/imageView2"
-            app:srcCompat="@drawable/star_rate" />
+            app:srcCompat="@drawable/star_rate"
+            app:tint="#93BC66" />
+
         <ImageView
             android:id="@+id/imageView4"
             android:layout_width="13dp"
             android:layout_height="13dp"
-            app:tint="#93BC66"
             app:layout_constraintBottom_toBottomOf="@+id/imageView3"
             app:layout_constraintStart_toEndOf="@+id/imageView3"
             app:layout_constraintTop_toTopOf="@+id/imageView3"
-            app:srcCompat="@drawable/star_rate" />
+            app:srcCompat="@drawable/star_rate"
+            app:tint="#93BC66" />
+
         <ImageView
             android:id="@+id/imageView5"
             android:layout_width="13dp"
             android:layout_height="13dp"
-            app:tint="#93BC66"
             app:layout_constraintBottom_toBottomOf="@+id/imageView4"
             app:layout_constraintStart_toEndOf="@+id/imageView4"
             app:layout_constraintTop_toTopOf="@+id/imageView4"
-            app:srcCompat="@drawable/star_rate" />
+            app:srcCompat="@drawable/star_rate"
+            app:tint="#93BC66" />
 
         <TextView
             android:id="@+id/tvComment"
-            android:layout_width="match_parent"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:paddingLeft="5dp"
+            android:layout_marginEnd="16dp"
             android:gravity="left"
+            android:paddingLeft="5dp"
             android:text="Awesome place for tourist trying to have a sip of coffee. Authentic taste, quiet with beautiful vintage decorations. Recommended."
-            app:layout_constraintEnd_toStartOf="@+id/guideline4"
-            app:layout_constraintStart_toStartOf="@+id/guideline3"
+            app:layout_constraintStart_toStartOf="@+id/imageView"
             app:layout_constraintTop_toBottomOf="@+id/imageView" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
