--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -47,7 +47,7 @@
         app:tint="@color/white" />
 
     <androidx.cardview.widget.CardView
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:id="@+id/cardView"
         android:layout_marginTop="64dp"
@@ -64,11 +64,12 @@
             android:layout_height="match_parent"/>
 
     </androidx.cardview.widget.CardView>
+
     <ImageButton
         android:id="@+id/buttonCapture"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginBottom="208dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginBottom="148dp"
         android:background="@drawable/button_camera"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,8 +78,8 @@
 
     <ImageButton
         android:id="@+id/flipCamera"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:background="@android:color/transparent"
         android:src="@drawable/camera_flip"
         app:layout_constraintBottom_toBottomOf="@+id/buttonCapture"
@@ -89,8 +90,8 @@
 
     <ImageButton
         android:id="@+id/flashToggle"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:background="@android:color/transparent"
         android:src="@drawable/flash_icon"
         app:layout_constraintBottom_toBottomOf="@+id/buttonCapture"
