--- a/app/src/main/res/layout/activity_hotel.xml
+++ b/app/src/main/res/layout/activity_hotel.xml
@@ -28,10 +28,9 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="Hotel/Homestay in Sa Pa"
-        android:fontFamily="@font/kufam"
+        android:fontFamily="@font/kufam_bold"
         android:textColor="#fff"
         android:textSize="24sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.794"
         app:layout_constraintStart_toEndOf="@+id/imgbtnGoback"
