--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,12 +11,11 @@
         android:layout_width="306dp"
         android:layout_height="71dp"
         android:layout_marginTop="144dp"
-        android:fontFamily="@font/kufam"
+        android:fontFamily="@font/kufam_bold"
         android:gravity="center"
         android:text="Enjoy your"
         android:textColor="@color/black"
         android:textSize="50sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,12 +26,11 @@
         android:layout_width="335dp"
         android:layout_height="82dp"
         android:layout_marginTop="16dp"
-        android:fontFamily="@font/kufam"
+        android:fontFamily="@font/kufam_bold"
         android:gravity="center"
         android:text="Vacation"
         android:textColor="#93BC66"
         android:textSize="50sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
