--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -27,8 +27,7 @@
         android:layout_marginTop="43dp"
         android:text="Sign in"
         android:textColor="#93BC66"
-        android:fontFamily="@font/kufam"
-        android:textStyle="bold"
+        android:fontFamily="@font/kufam_bold"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -46,11 +45,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="37dp"
-            android:fontFamily="@font/kufam"
+            android:fontFamily="@font/kufam_bold"
             android:text="Sign Up"
             android:textColor="#000000"
             android:textSize="48sp"
-            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.501"
             app:layout_constraintStart_toStartOf="parent"
@@ -155,11 +153,10 @@
             android:layout_height="55dp"
             android:layout_marginTop="30dp"
             android:backgroundTint="#000000"
-            android:fontFamily="@font/kufam"
+            android:fontFamily="@font/kufam_bold"
             android:text="Sign Up"
             android:textColor="#fff"
             android:textSize="20sp"
-            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/edPassword"
             app:layout_constraintStart_toStartOf="@+id/edPassword"
             app:layout_constraintTop_toBottomOf="@+id/edPassword" />
