--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -31,12 +31,11 @@
         android:id="@+id/textView"
         android:layout_width="306dp"
         android:layout_height="71dp"
-        android:fontFamily="@font/kufam"
+        android:fontFamily="@font/kufam_bold"
         android:gravity="center"
         android:text="Let's start"
         android:textColor="@color/black"
         android:textSize="50sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,12 +46,11 @@
         android:layout_width="335dp"
         android:layout_height="82dp"
         android:layout_marginTop="16dp"
-        android:fontFamily="@font/kufam"
+        android:fontFamily="@font/kufam_bold"
         android:gravity="center"
         android:text="your Vacation"
         android:textColor="@color/black"
         android:textSize="50sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
