--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,7 +65,7 @@
             android:layout_width="75dp"
             android:layout_height="75dp"
             android:layout_marginTop="48dp"
-            android:background="#DADADA"
+            android:background="#CEE9BE"
             app:shapeAppearanceOverlay="@style/roundedImage"
             app:circularflow_radiusInDP="20dp"
             app:layout_constraintEnd_toStartOf="@+id/guideline4"
@@ -91,9 +91,8 @@
             android:layout_height="wrap_content"
             android:text="You"
             android:textColor="#93BC66"
-            android:textStyle="bold"
             android:textSize="15sp"
-            android:fontFamily="@font/kufam"
+            android:fontFamily="@font/kufam_bold"
             app:layout_constraintEnd_toEndOf="@+id/imageButton"
             app:layout_constraintStart_toStartOf="@+id/imageButton"
             app:layout_constraintTop_toBottomOf="@+id/imageButton" />
@@ -114,9 +113,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Mai"
-            android:textStyle="bold"
             android:textSize="15sp"
-            android:fontFamily="@font/kufam"
+            android:fontFamily="@font/kufam_bold"
             app:layout_constraintEnd_toEndOf="@+id/imgAvatar"
             app:layout_constraintStart_toStartOf="@+id/imgAvatar"
             app:layout_constraintTop_toBottomOf="@+id/imgAvatar" />
@@ -138,9 +136,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Phuc"
-            android:textStyle="bold"
             android:textSize="15sp"
-            android:fontFamily="@font/kufam"
+            android:fontFamily="@font/kufam_bold"
             app:layout_constraintEnd_toEndOf="@+id/userStory2"
             app:layout_constraintStart_toStartOf="@+id/userStory2"
             app:layout_constraintTop_toBottomOf="@+id/userStory2" />
@@ -161,9 +158,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Nghia"
-            android:textStyle="bold"
             android:textSize="15sp"
-            android:fontFamily="@font/kufam"
+            android:fontFamily="@font/kufam_bold"
             app:layout_constraintEnd_toEndOf="@+id/userStory3"
             app:layout_constraintStart_toStartOf="@+id/userStory3"
             app:layout_constraintTop_toBottomOf="@+id/userStory3" />
@@ -207,9 +203,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Assistant"
-            android:textStyle="bold"
             android:textSize="16sp"
-            android:fontFamily="@font/kufam"
+            android:fontFamily="@font/kufam_bold"
             app:layout_constraintEnd_toEndOf="@+id/assistantButton"
             app:layout_constraintStart_toStartOf="@+id/assistantButton"
             app:layout_constraintTop_toBottomOf="@+id/assistantButton" />
@@ -232,9 +227,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Third Party"
-            android:textStyle="bold"
             android:textSize="16sp"
-            android:fontFamily="@font/kufam"
+            android:fontFamily="@font/kufam_bold"
             app:layout_constraintEnd_toEndOf="@+id/thirdPartyButton"
             app:layout_constraintStart_toStartOf="@+id/thirdPartyButton"
             app:layout_constraintTop_toBottomOf="@+id/thirdPartyButton" />
@@ -257,9 +251,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Setting"
-            android:textStyle="bold"
             android:textSize="16sp"
-            android:fontFamily="@font/kufam"
+            android:fontFamily="@font/kufam_bold"
             app:layout_constraintEnd_toEndOf="@+id/settingButton"
             app:layout_constraintStart_toStartOf="@+id/settingButton"
             app:layout_constraintTop_toBottomOf="@+id/settingButton" />
@@ -332,9 +325,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Sa Pa"
-                android:fontFamily="@font/kufam"
+                android:fontFamily="@font/kufam_bold"
                 android:textSize="18sp"
-                android:textStyle="bold"
                 android:textColor="@color/white"
                 android:layout_marginTop="20dp"
                 android:layout_marginStart="20dp"/>
