--- a/app/src/main/res/layout/layout_hotel.xml
+++ b/app/src/main/res/layout/layout_hotel.xml
@@ -26,10 +26,9 @@
         android:layout_width="wrap_content"
         android:layout_height="27dp"
         android:layout_marginStart="10dp"
-        android:fontFamily="@font/kufam"
+        android:fontFamily="@font/kufam_bold"
         android:text="Pao's Sapa Leisure Hotel "
         android:textSize="15sp"
-        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/imgHotel"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -105,11 +104,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:fontFamily="@font/kufam"
+        android:fontFamily="@font/kufam_bold"
         android:text="VND 1,872,000"
         android:textColor="#8DC989"
         android:textSize="10sp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/textView19"
         app:layout_constraintStart_toEndOf="@+id/textView19"
         app:layout_constraintTop_toTopOf="@+id/textView19" />
@@ -132,11 +130,10 @@
         android:layout_width="140dp"
         android:layout_height="35dp"
         android:backgroundTint="#93BC66"
-        android:fontFamily="@font/kufam"
+        android:fontFamily="@font/kufam_bold"
         android:text="Check availability"
         android:textColor="#fff"
         android:textSize="10sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/tvDetailHotel"
         app:layout_constraintTop_toBottomOf="@+id/textView21" />
 
