--- a/app/src/main/res/layout/layout_image.xml
+++ b/app/src/main/res/layout/layout_image.xml
@@ -8,7 +8,7 @@
     <GridView
         android:id="@+id/listImage"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="1000dp"
         android:numColumns="3"
         android:scrollbars="none"
         app:layout_constraintEnd_toEndOf="parent"
